# sisteminis-programavimas

./: Balu tvarkykle.cpp  CMakeLists.txt  GeneralUtils.cpp  GeneralUtils.h  README.md  Student.cpp  Student.h  StudentConsoleInputProcessor.cpp  StudentConsoleInputProcessor.h  StudentFIleGenerator.cpp  StudentFIleGenerator.h  StudentFileProcessor.cpp  StudentFileProcessor.h  kursiokai.txt
